# system-manager

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
